syntax = "proto3";

package v1;

import "tagger/tagger.proto";

option go_package = "./v1;v1_pb";

message BotCreateRequest {
    string username = 1 [(tagger.tags) = "binding:\"required\" label:\"username\""];
}

message BotCreateResponse {
    string token = 1 [(tagger.tags) = "json:\"token\""];
}

message BotListRequest {}

message BotListResponse {
    message Item {
        int32 id = 1 [(tagger.tags) = "json:\"id\""];
        string username = 2 [(tagger.tags) = "json:\"username\""];
        string token = 3 [(tagger.tags) = "json:\"token\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
}
